# ai-agent-demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/agent/: multi_chat_agent.py
app/agent/mcps/: shell_tools.py  time_tools.py
app/agent/tools/: computer_control_mcp_client.py  sandbox_tools_client.py  shell_tools_client.py  time_tools_client.py  windows_use_tools_client.py
app/agent/utils/: mcp_utils.py
app/bailian/: bailian.py  bailian_agent.py  bailian_amap.py  bailian_github.py  bailian_playwright.py  bailian_python_perl.py  bailian_tools.py  common.py  file_store_multi_chat_model.py  multi_chat_agent.py
app/bailian/mcp_clients/: amap_mcp_client.py  github_mcp_client.py  math_mcp_client.py  playwright_mcp_client.py
app/bailian/qwq/: bailian_qwq.py
app/bailian/tools/: __init__.py  calc_tools.py  file_tools.py  python_tool.py
app/common/: init.py
app/mcp/: math_mcp_server.py
bailian/: bailian.py
bailian/qwq/: bailian_qwq.py
