[project]
name = "ai-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
